--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@react-navigation/stack": "^7.2.3",
     "react": "19.0.0",
     "react-native": "0.78.1",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-permissions": "^5.4.1",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.10.0",
     "react-native-swiper": "^1.6.0",
