--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "0.78.1",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.24.0",
+    "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-permissions": "^5.4.1",
     "react-native-safe-area-context": "^5.3.0",
