--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-firebase/app": "^22.2.1",
     "@react-native-firebase/auth": "^22.2.1",
     "@react-native-google-signin/google-signin": "^14.0.1",
@@ -18,7 +18,9 @@
     "@react-navigation/native": "^7.1.3",
     "@react-navigation/native-stack": "^7.3.7",
     "@react-navigation/stack": "^7.2.3",
+    "i18next": "^25.2.1",
     "react": "19.0.0",
+    "react-i18next": "^15.5.3",
     "react-native": "0.78.1",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.24.0",
@@ -41,6 +43,7 @@
     "@react-native/eslint-config": "0.78.1",
     "@react-native/metro-config": "0.78.1",
     "@react-native/typescript-config": "0.78.1",
+    "@types/i18next": "^12.1.0",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.0.0",
     "@types/react-native-vector-icons": "^6.4.18",
